@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2019-02-12
  * Added get_field_options() and format_field_options() to wing.vue.js.
+ * Added format_objects_as_field_options() to object_list in wing.vue.js.
 
 2019-02-05
  * Modified S3Image to allow verification of an image outside of the handle upload method.
